apps/cli/src/tui/widgets/snapshots/statusbar__reconnecting.snap
---
source: apps/cli/src/tui/widgets/tests.rs
expression: "snapshot(story, full_ascii)"
---
=== text (unicode) ===
 gitraptor · ⚠  reconnecting · main protected · you                  ⚡ 2  ⛔ 1
=== styles (truecolor, unicode) ===
0:0-0 bg=#3a3a3a
0:1-9 bg=#3a3a3a BOLD
0:10-12 fg=#949494 bg=#3a3a3a
0:13-14 fg=#d29922 bg=#3a3a3a
0:15-15 bg=#3a3a3a
0:16-27 fg=#d29922 bg=#3a3a3a
0:28-30 fg=#949494 bg=#3a3a3a
0:31-44 bg=#3a3a3a
0:45-47 fg=#949494 bg=#3a3a3a
0:48-68 bg=#3a3a3a
0:69-69 fg=#d29922 bg=#3a3a3a
0:71-71 bg=#3a3a3a
0:72-72 fg=#d29922 bg=#3a3a3a BOLD
0:73-74 bg=#3a3a3a
0:75-75 fg=#f85149 bg=#3a3a3a
0:77-77 bg=#3a3a3a
0:78-78 fg=#f85149 bg=#3a3a3a BOLD
0:79-79 bg=#3a3a3a
=== styles (256, unicode) ===
0:0-0 bg=@237
0:1-9 bg=@237 BOLD
0:10-12 fg=@246 bg=@237
0:13-14 fg=@172 bg=@237
0:15-15 bg=@237
0:16-27 fg=@172 bg=@237
0:28-30 fg=@246 bg=@237
0:31-44 bg=@237
0:45-47 fg=@246 bg=@237
0:48-68 bg=@237
0:69-69 fg=@172 bg=@237
0:71-71 bg=@237
0:72-72 fg=@172 bg=@237 BOLD
0:73-74 bg=@237
0:75-75 fg=@203 bg=@237
0:77-77 bg=@237
0:78-78 fg=@203 bg=@237 BOLD
0:79-79 bg=@237
=== styles (16, unicode) ===
0:0-0 bg=DarkGray
0:1-9 bg=DarkGray BOLD
0:10-12 fg=DarkGray bg=DarkGray
0:13-14 fg=Yellow bg=DarkGray
0:15-15 bg=DarkGray
0:16-27 fg=Yellow bg=DarkGray
0:28-30 fg=DarkGray bg=DarkGray
0:31-44 bg=DarkGray
0:45-47 fg=DarkGray bg=DarkGray
0:48-68 bg=DarkGray
0:69-69 fg=Yellow bg=DarkGray
0:71-71 bg=DarkGray
0:72-72 fg=Yellow bg=DarkGray BOLD
0:73-74 bg=DarkGray
0:75-75 fg=Red bg=DarkGray
0:77-77 bg=DarkGray
0:78-78 fg=Red bg=DarkGray BOLD
0:79-79 bg=DarkGray
=== styles (no-color, unicode) ===
0:0-9 BOLD
0:10-12 BOLD | DIM
0:13-27 BOLD
0:28-30 BOLD | DIM
0:31-44 BOLD
0:45-47 BOLD | DIM
0:48-69 BOLD
0:71-75 BOLD
0:77-79 BOLD
=== styles (high-contrast, unicode) ===
0:0-0 fg=#ffffff bg=#303030
0:1-9 fg=#ffffff bg=#303030 BOLD
0:10-12 fg=#c6c6c6 bg=#303030
0:13-14 fg=#ffe066 bg=#303030
0:15-15 fg=#ffffff bg=#303030
0:16-27 fg=#ffe066 bg=#303030
0:28-30 fg=#c6c6c6 bg=#303030
0:31-44 fg=#ffffff bg=#303030
0:45-47 fg=#c6c6c6 bg=#303030
0:48-68 fg=#ffffff bg=#303030
0:69-69 fg=#ffe066 bg=#303030
0:71-71 fg=#ffffff bg=#303030
0:72-72 fg=#ffe066 bg=#303030 BOLD
0:73-74 fg=#ffffff bg=#303030
0:75-75 fg=#ffa198 bg=#303030
0:77-77 fg=#ffffff bg=#303030
0:78-78 fg=#ffa198 bg=#303030 BOLD
0:79-79 fg=#ffffff bg=#303030
=== text (ascii) ===
 gitraptor | [!] reconnecting | main protected | you         [c] 2  [blocked] 1
=== styles (truecolor, ascii) ===
0:0-0 bg=#3a3a3a
0:1-9 bg=#3a3a3a BOLD
0:10-12 fg=#949494 bg=#3a3a3a
0:13-15 fg=#d29922 bg=#3a3a3a
0:16-16 bg=#3a3a3a
0:17-28 fg=#d29922 bg=#3a3a3a
0:29-31 fg=#949494 bg=#3a3a3a
0:32-45 bg=#3a3a3a
0:46-48 fg=#949494 bg=#3a3a3a
0:49-60 bg=#3a3a3a
0:61-63 fg=#d29922 bg=#3a3a3a
0:64-64 bg=#3a3a3a
0:65-65 fg=#d29922 bg=#3a3a3a BOLD
0:66-67 bg=#3a3a3a
0:68-76 fg=#f85149 bg=#3a3a3a
0:77-77 bg=#3a3a3a
0:78-78 fg=#f85149 bg=#3a3a3a BOLD
0:79-79 bg=#3a3a3a
